--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <DT>
                         <ul style="list-style-type: none; padding: 0; text-align: center;">
                             <li>
-                                <a style="color: white; text-decoration: none; padding: 10px; display: inline-block; border: 1px solid white; border-radius: 5px; margin: 5px;" HREF="javascript:(function() { let saveDataKey='RetroBowl.0.savedata.ini'; let saveData=localStorage.getItem(saveDataKey); if (saveData) { let updatedSaveData=saveData.replace(/coach_credit=&quot;(\d+)&quot;/, 'coach_credit=&quot;9999&quot;'); localStorage.setItem(saveDataKey, updatedSaveData); alert(&quot;Coach credits updated to 9999! proll.dev on top. refresh to see credits!&quot;); } else { alert(&quot;Save data not found!&quot;); } })();">9K Coach Credits</a>
+                                <a style="color: white; text-decoration: none; padding: 10px; display: inline-block; border: 1px solid white; border-radius: 5px; margin: 5px;" HREF="javascript:(function() { let saveDataKey='RetroBowl.0.savedata.ini'; let saveData=localStorage.getItem(saveDataKey); if (saveData) { let updatedSaveData=saveData.replace(/coach_credit=&quot;(\d+)&quot;/, 'coach_credit=&quot;9999&quot;'); localStorage.setItem(saveDataKey, updatedSaveData); alert(&quot;Coach credits updated to 9999! proll.dev on top. refresh to see credits!&quot;); } else { alert(&quot;Error. Please open retrobowl in a new tab and then click the button&quot;); } })();">9K Coach Credits</a>
 <a style="color: white; text-decoration: none; padding: 10px; display: inline-block; border: 1px solid white; border-radius: 5px; margin: 5px;" 
    href="javascript:(function() { 
        let saveDataKey='RetroBowl.0.savedata.ini'; 
@@ -27,7 +27,7 @@
            localStorage.setItem(saveDataKey, updatedSaveData); 
            alert(&quot;Facility levels maxed! proll.dev. Refresh to see changes.&quot;); 
        } else { 
-           alert(&quot;Save data not found!&quot;); 
+           alert(&quot;Error. Please open retrobowl in a new tab and then click the button&quot;); 
        } 
    })();">Max Facilities</a>
                             </li>
