--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
                     <DT>
                         <ul style="list-style-type: none; padding: 0; text-align: center;">
                             <li>
-                                <a style="color: white; text-decoration: none; padding: 10px; display: inline-block; border: 1px solid white; border-radius: 5px; margin: 5px;" HREF="javascript:(function() { let saveDataKey='RetroBowl.0.savedata.ini'; let saveData=localStorage.getItem(saveDataKey); if (saveData) { let updatedSaveData=saveData.replace(/coach_credit=&quot;(\d+)&quot;/, 'coach_credit=&quot;9999&quot;'); localStorage.setItem(saveDataKey, updatedSaveData); alert(&quot;Coach credits updated to 9999! proll.dev on top. refresh to see credits!&quot;); } else { alert(&quot;Error. Please open retrobowl in a new tab and then click the button&quot;); } })();">9K Coach Credits</a>
+<a style="color: white; text-decoration: none; padding: 10px; display: inline-block; border: 1px solid white; border-radius: 5px; margin: 5px;" 
+   href="javascript:(function() { 
+       let saveDataKey='RetroBowl.0.savedata.ini'; 
+       let saveData=localStorage.getItem(saveDataKey); 
+       if (saveData) { 
+           let credits = prompt('Enter the amount of coach credits:'); 
+           if (credits !== null && !isNaN(credits) && credits.trim() !== '') { 
+               let updatedSaveData = saveData.replace(/coach_credit=&quot;(\d+)&quot;/, 'coach_credit=&quot;' + credits + '&quot;'); 
+               localStorage.setItem(saveDataKey, updatedSaveData); 
+               alert('Coach credits updated to ' + credits + '! Refresh to see changes. proll.dev'); 
+           } else { 
+               alert('Invalid input. Please enter a valid number.'); 
+           } 
+       } else { 
+           alert('Error. Please open Retro Bowl in a new tab and then click the button.'); 
+       } 
+   })();">Coach Credits</a>
 <a style="color: white; text-decoration: none; padding: 10px; display: inline-block; border: 1px solid white; border-radius: 5px; margin: 5px;" 
    href="javascript:(function() { 
        let saveDataKey='RetroBowl.0.savedata.ini'; 
