--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 <H3 style="text-align: center; color: white;">How to Use Bookmarklets</H3>
                 <ul style="list-style-type: none; padding: 0; text-align: center;">
                     <li>To use a  bookmarklet</li>
-                    <li>Drag one of the links above to your bookmarks bar.</li>
-                    <li>Open retrobowl. Click cheat button.</li>
+                    <li>Open retrobowl in a seperate tab, then click the cheat button.</li>
                     <li>Refresh the game to see the changes.</li>
                     <li style="color: red;">ONLY WORKS ON SAVE 1 OF RETROBOWL</li>
                 </ul>
